--- a/DE2-115Codec/DE2-115Codec.qsf
+++ b/DE2-115Codec/DE2-115Codec.qsf
@@ -115,4 +115,5 @@ set_location_assignment PIN_AF24 -to MIDI_IN_DATA[2]
 set_location_assignment PIN_AF25 -to MIDI_IN_DATA[1]
 set_location_assignment PIN_AE22 -to MIDI_IN_DATA[0]
 set_global_assignment -name VERILOG_FILE midiNoteNumberToSampleTicks.v
+set_location_assignment PIN_AB22 -to clock_12
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
